--- a/css/enter.css
+++ b/css/enter.css
@@ -2,6 +2,17 @@
     margin-bottom: 40px;
 }
 
-.display_area{
-    
+#memoArea{
+    display: flex;
+    justify-self:center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#title_test{
+    width: 150px;
+}
+
+#text_area_test{
+    width: 150px;
 }
